--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Portfolio</title>
     <!--custom css link-->
     <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet"
+  href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 </head>
 <body>
     
