--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <!--Custom js link-->
+    <script type="'type/javascript" src="js/script.js"></script>
+  </body>
 </html>
