--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     />
   </head>
   <body>
+
+    <!--Header Design-->
+    <header>
+        <a href="#" class="logo">Chr <span>s</span>tphr.</a>
+    </header>
+
     <!--Custom js link-->
     <script type="'type/javascript" src="js/script.js"></script>
   </body>
