--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
         <a href="#" class="logo">Chr <span>s</span>tphr.</a>
     </header>
 
+    <ul class="navlist">
+        <li><a href="#home" class="active">Home</a></li>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#contact">Contact Me</a></li>
+    </ul>
+
     <!--Custom js link-->
     <script type="'type/javascript" src="js/script.js"></script>
   </body>
