added a hambuger icon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
     <!--custom css link-->
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link rel="stylesheet" type="text/css" href="index.css" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
@@ -22,7 +22,7 @@
 
     <!--Header Design-->
     <header>
-        <a href="#" class="logo">Chr <span>s</span>tphr.</a>
+        <a href="#" class="logo">Chr<span>s</span>tphr.</a>
     </header>
 
     <ul class="navlist">
@@ -32,6 +32,10 @@
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#contact">Contact Me</a></li>
     </ul>
+
+    <div class="bx bx-menu" id="menu-icon">
+        
+    </div>
 
     <!--Custom js link-->
     <script type="'type/javascript" src="js/script.js"></script>
