styled the header name

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!--Header Design-->
     <header>
-        <a href="#" class="logo">Chr<span>s</span>tphr.</a>
+        <a href="#" class="logo">Chr<span>s</span>tp<span>h</span>r.</a>
     
     <ul class="navlist">
         <li><a href="#home" class="active">Home</a></li>
