--- a/index.html
+++ b/index.html
@@ -37,6 +37,21 @@
     </div>
     </header>
 
+    <!--Home Section Design-->
+    <section class="home" id="home">
+        <div class="home-text">
+            <div class="slide">
+                <span class="one">Hello</span>
+                <span class="two">I'm</span>
+            </div>
+            <h1>Chrstphr</h1>
+            <h3>Web <span>Developer.</span></h3>
+            <p>Web Developer With 5+ Years Experience That Keeps Customers<br>
+                Coming Back For Services Makes Best Effort.
+            </p>
+        </div>
+    </section>
+
     <!--Custom js link-->
     <script type="'type/javascript" src="js/script.js"></script>
   </body>
