--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
             <p>Web Developer With 5+ Years Experience That Keeps Customers<br>
                 Coming Back For Services Makes Best Effort.
             </p>
+            <div class="button">
+                <a href="#" class="btn">Say Hello</a>
+                <a href="#" class="btn2"><span><i class='bx bx-play'></i></span>Watch My Work</a>
+            </div>
         </div>
     </section>
 
