--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@
         </div>
     </section>
 
+    <!--About Section Design-->
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="Reels/Snapchat-1130320769.jpg" alt="">
+        </div>
+        <div class="about-text">
+            <h2>About<span>Me</span></h2>
+            <h4>Creative Web Dev!</h4>
+        </div>
+    </section>
+
     <!--Custom js link-->
     <script type="'type/javascript" src="js/script.js"></script>
   </body>
