added an about text with a button

--- a/index.html
+++ b/index.html
@@ -19,52 +19,66 @@
     />
   </head>
   <body>
-
     <!--Header Design-->
     <header>
-        <a href="#" class="logo">Chr<span>s</span>tp<span>h</span>r.</a>
-    
-    <ul class="navlist">
+      <a href="#" class="logo">Chr<span>s</span>tp<span>h</span>r.</a>
+
+      <ul class="navlist">
         <li><a href="#home" class="active">Home</a></li>
         <li><a href="#about">About Me</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#contact">Contact Me</a></li>
-    </ul>
+      </ul>
 
-    <div class="bx bx-menu" id="menu-icon">
-
-    </div>
+      <div class="bx bx-menu" id="menu-icon"></div>
     </header>
 
     <!--Home Section Design-->
     <section class="home" id="home">
-        <div class="home-text">
-            <div class="slide">
-                <span class="one">Hello</span>
-                <span class="two">I'm</span>
-            </div>
-            <h1>Chrstphr</h1>
-            <h3>Web <span>Developer.</span></h3>
-            <p>Web Developer With 5+ Years Experience That Keeps Customers<br>
-                Coming Back For Services Makes Best Effort.
-            </p>
-            <div class="button">
-                <a href="#" class="btn">Say Hello</a>
-                <a href="#" class="btn2"><span><i class='bx bx-play'></i></span>Watch My Work</a>
-            </div>
+      <div class="home-text">
+        <div class="slide">
+          <span class="one">Hello</span>
+          <span class="two">I'm</span>
         </div>
+        <h1>Chrstphr</h1>
+        <h3>Web <span>Developer.</span></h3>
+        <p>
+          Web Developer With 5+ Years Experience That Keeps Customers<br />
+          Coming Back For Services Makes Best Effort.
+        </p>
+        <div class="button">
+          <a href="#" class="btn">Say Hello</a>
+          <a href="#" class="btn2"
+            ><span><i class="bx bx-play"></i></span>Watch My Work</a
+          >
+        </div>
+      </div>
     </section>
 
     <!--About Section Design-->
     <section class="about" id="about">
-        <div class="about-img">
-            <img src="Reels/Snapchat-1130320769.jpg" alt="">
-        </div>
-        <div class="about-text">
-            <h2>About<span>Me</span></h2>
-            <h4>Creative Web Dev!</h4>
-        </div>
+      <div class="about-img">
+        <img src="Reels/Snapchat-1130320769.jpg" alt="" />
+      </div>
+      <div class="about-text">
+        <h2>About<span>Me</span></h2>
+        <h4>Creative Web Dev!</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, veniam
+          vero laudantium, quasi cumque obcaecati sequi incidunt ullam ab nemo
+          reprehenderit nobis molestias odio temporibus quis, eum iure assumenda
+          quisquam dolore. Distinctio, hic! Itaque debitis illo culpa asperiores
+          quaerat quibusdam quasi magnam tenetur pariatur. Iste minus asperiores
+          accusantium aperiam dicta aut iure placeat nam? Quia aut nobis maxime
+          reprehenderit voluptatum quisquam, itaque illum recusandae iusto est
+          impedit quae ipsam maiores amet dolore eaque id quibusdam incidunt
+          accusantium ullam commodi adipisci? In placeat consectetur minus
+          dolores earum totam. Sed id repudiandae reprehenderit, necessitatibus
+          eveniet ea natus quod libero optio magni iure.
+        </p>
+        <a href="#" class="btn">About More</a>
+      </div>
     </section>
 
     <!--Custom js link-->
