--- a/index.html
+++ b/index.html
@@ -82,6 +82,6 @@
     </section>
 
     <!--Custom js link-->
-    <script type="'type/javascript" src="js/script.js"></script>
+    <script type="'type/javascript" src="index.js"></script>
   </body>
 </html>
