done with html section of my-section

--- a/index.html
+++ b/index.html
@@ -77,7 +77,52 @@
         <a href="#" class="btn">About More</a>
       </div>
     </section>
-    
+
+    <!--Service Section Design-->
+    <section class="services" id="services">
+        <div class="main-text">
+            <p>What I Am Expert In</p>
+            <h2><span>My</span> Services</h2>
+        </div>
+        <div class="services-content">
+            <div class="box">
+                <div class="s-icons">
+                    <i class="bx bx-mobile-alt"> </i>
+                </div>
+                <h3>Web Design</h3>
+                <p>
+                    One way to categorize the activities is in terms of the 
+                    professional's area of experties such as competitivitie ananlysis
+                    corporate strategy.
+                </p>
+                <a href="#" class="read">Read More</a>
+            </div>
+            <div class="box">
+                <div class="s-icons">
+                    <i class='bx bx-edit-alt' ></i>
+                </div>
+                <h3>Web Development</h3>
+                <p>
+                    One way to categorize the activities is in terms of the 
+                    professional's area of experties such as competitivitie ananlysis
+                    corporate strategy.
+                </p>
+                <a href="#" class="read">Read More</a>
+            </div>
+            <div class="box">
+                <div class="s-icons">
+                    <i class='bx bx-code-alt' ></i>
+                </div>
+                <h3>Creative Development</h3>
+                <p>
+                    One way to categorize the activities is in terms of the 
+                    professional's area of experties such as competitivitie ananlysis
+                    corporate strategy.
+                </p>
+                <a href="#" class="read">Read More</a>
+            </div>
+        </div>
+    </section>
 
     <!--Custom js link-->
     <script src="index.js"></script>
