--- a/index.html
+++ b/index.html
@@ -80,48 +80,129 @@
 
     <!--Service Section Design-->
     <section class="services" id="services">
-        <div class="main-text">
-            <p>What I Am Expert In</p>
-            <h2><span>My</span> Services</h2>
+      <div class="main-text">
+        <p>What I Am Expert In</p>
+        <h2><span>My</span> Services</h2>
+      </div>
+      <div class="services-content">
+        <div class="box">
+          <div class="s-icons">
+            <i class="bx bx-mobile-alt"> </i>
+          </div>
+          <h3>Web Design</h3>
+          <p>
+            One way to categorize the activities is in terms of the
+            professional's area of experties such as competitivitie ananlysis
+            corporate strategy.
+          </p>
+          <a href="#" class="read">Read More</a>
         </div>
-        <div class="services-content">
-            <div class="box">
-                <div class="s-icons">
-                    <i class="bx bx-mobile-alt"> </i>
-                </div>
-                <h3>Web Design</h3>
-                <p>
-                    One way to categorize the activities is in terms of the 
-                    professional's area of experties such as competitivitie ananlysis
-                    corporate strategy.
-                </p>
-                <a href="#" class="read">Read More</a>
-            </div>
-            <div class="box">
-                <div class="s-icons">
-                    <i class='bx bx-edit-alt' ></i>
-                </div>
-                <h3>Web Development</h3>
-                <p>
-                    One way to categorize the activities is in terms of the 
-                    professional's area of experties such as competitivitie ananlysis
-                    corporate strategy.
-                </p>
-                <a href="#" class="read">Read More</a>
-            </div>
-            <div class="box">
-                <div class="s-icons">
-                    <i class='bx bx-code-alt' ></i>
-                </div>
-                <h3>Creative Development</h3>
-                <p>
-                    One way to categorize the activities is in terms of the 
-                    professional's area of experties such as competitivitie ananlysis
-                    corporate strategy.
-                </p>
-                <a href="#" class="read">Read More</a>
-            </div>
+        <div class="box">
+          <div class="s-icons">
+            <i class="bx bx-edit-alt"></i>
+          </div>
+          <h3>Web Development</h3>
+          <p>
+            One way to categorize the activities is in terms of the
+            professional's area of experties such as competitivitie ananlysis
+            corporate strategy.
+          </p>
+          <a href="#" class="read">Read More</a>
         </div>
+        <div class="box">
+          <div class="s-icons">
+            <i class="bx bx-code-alt"></i>
+          </div>
+          <h3>Creative Development</h3>
+          <p>
+            One way to categorize the activities is in terms of the
+            professional's area of experties such as competitivitie ananlysis
+            corporate strategy.
+          </p>
+          <a href="#" class="read">Read More</a>
+        </div>
+      </div>
+    </section>
+
+    <!--Portfolio Section Design-->
+    <section class="portfolio" id="portfolio">
+      <div class="main-text">
+        <p>Portfolio</p>
+        <h2><span>Latest</span> Project</h2>
+      </div>
+      <div class="portfolio-content">
+        <div class="row">
+          <img src="Reels/FB_IMG_15972991824217526.jpg" alt="" />
+          <div class="layer">
+            <h5>Visual Design</h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. At
+              nostrum rem, doloribus neque atque hic.
+            </p>
+            <a href="#"><i class='bx bx-link-external' ></i></a>
+          </div>
+        </div>
+
+        <div class="row">
+            <img src="Reels/fc2f8e60fc7a92b68b75fef7015a799c-01.jpeg" alt="" />
+            <div class="layer">
+              <h5>Visual Design</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. At
+                nostrum rem, doloribus neque atque hic.
+              </p>
+              <a href="#"><i class='bx bx-link-external' ></i></a>
+            </div>
+          </div>
+
+          <div class="row">
+            <img src="Reels/FB_IMG_15972991824217526.jpg" alt="" />
+            <div class="layer">
+              <h5>Visual Design</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. At
+                nostrum rem, doloribus neque atque hic.
+              </p>
+              <a href="#"><i class='bx bx-link-external' ></i></a>
+            </div>
+          </div>
+
+          <div class="row">
+            <img src="Reels/fc2f8e60fc7a92b68b75fef7015a799c-01.jpeg" alt="" />
+            <div class="layer">
+              <h5>Visual Design</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. At
+                nostrum rem, doloribus neque atque hic.
+              </p>
+              <a href="#"><i class='bx bx-link-external' ></i></a>
+            </div>
+          </div>
+
+          <div class="row">
+            <img src="Reels/FB_IMG_15972991824217526.jpg" alt="" />
+            <div class="layer">
+              <h5>Visual Design</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. At
+                nostrum rem, doloribus neque atque hic.
+              </p>
+              <a href="#"><i class='bx bx-link-external' ></i></a>
+            </div>
+          </div>
+
+          <div class="row">
+            <img src="Reels/fc2f8e60fc7a92b68b75fef7015a799c-01.jpeg" alt="" />
+            <div class="layer">
+              <h5>Visual Design</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. At
+                nostrum rem, doloribus neque atque hic.
+              </p>
+              <a href="#"><i class='bx bx-link-external' ></i></a>
+            </div>
+          </div>
+      </div>
     </section>
 
     <!--Custom js link-->
