--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         </div>
 
         <div class="row">
-            <img src="Reels/fc2f8e60fc7a92b68b75fef7015a799c-01.jpeg" alt="" />
+            <img src="Reels/FB_IMG_15972991824217526.jpg" alt="" />
             <div class="layer">
               <h5>Visual Design</h5>
               <p>
@@ -168,7 +168,7 @@
           </div>
 
           <div class="row">
-            <img src="Reels/fc2f8e60fc7a92b68b75fef7015a799c-01.jpeg" alt="" />
+            <img src="Reels/FB_IMG_15972991824217526.jpg" alt="" />
             <div class="layer">
               <h5>Visual Design</h5>
               <p>
@@ -192,7 +192,7 @@
           </div>
 
           <div class="row">
-            <img src="Reels/fc2f8e60fc7a92b68b75fef7015a799c-01.jpeg" alt="" />
+            <img src="Reels/FB_IMG_15972991824217526.jpg" alt="" />
             <div class="layer">
               <h5>Visual Design</h5>
               <p>
