--- a/index.html
+++ b/index.html
@@ -205,6 +205,13 @@
       </div>
     </section>
 
+    <!--contact section design-->
+    <section class="contact" id="contact">
+        <div class="contact-text">
+            <h2>Contact <span>Me!</span></h2>
+        </div>
+    </section>
+
     <!--Custom js link-->
     <script src="index.js"></script>
   </body>
