--- a/index.html
+++ b/index.html
@@ -209,6 +209,20 @@
     <section class="contact" id="contact">
         <div class="contact-text">
             <h2>Contact <span>Me!</span></h2>
+            <h4>If You Have Any Project In Mind.</h4>
+            <p>I'm a Web Developer - creating bold and brave sites for 
+            companies all across the world.</p>
+            <div class="list">
+                <li><a href="#">08089566069</a></li>
+                <li><a href="#">somto565@gmail.com</a></li>
+                <li><a href="#">Like Share & Subscribe</a></li>
+            </div>
+             <div class="contact-icons">
+                <a href="#"><i class='bx bxl-facebook' ></i></a>
+                <a href="#"><i class='bx bxl-twitter' ></i></a>
+                <a href="#"><i class='bx bxl-instagram' ></i></a>
+                <a href="#"><i class='bx bxl-youtube' ></i></a>
+             </div>
         </div>
     </section>
 
