--- a/index.html
+++ b/index.html
@@ -224,6 +224,15 @@
                 <a href="#"><i class='bx bxl-youtube' ></i></a>
              </div>
         </div>
+        <div class="contact-form">
+            <form action="">
+                <input type="name" placeholder="Your Name" required>
+                <input type="email" placeholder="Your Email Address" required>
+                <input type="" placeholder="Your Mobile Number" required>
+                <textarea name="" id="" cols="35" rows="10" placeholder="How Can I Help You?" required></textarea>
+                <input type="submit" value="Send Message" class="submit" requi2red>
+            </form>
+        </div>
     </section>
 
     <!--Custom js link-->
