i just de commit abg

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!--About Section Design-->
     <section class="about" id="about">
       <div class="about-img">
-        <img src="Reels/Snapchat-1130320769.jpg" alt="" />
+        <img src="Reels/Snapchat-85973193.jpg" alt="" />
       </div>
       <div class="about-text">
         <h2>About <span>Me</span></h2>
